--- a/src/IdentityProvider/Pages/Account/Manage/DeletePersonalData.cshtml
+++ b/src/IdentityProvider/Pages/Account/Manage/DeletePersonalData.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model DeletePersonalDataModel
+@model IdentityProvider.Pages.Account.Manage.DeletePersonalDataModel
 @{
     ViewData["Title"] = "Delete Personal Data";
     ViewData["ActivePage"] = ManageNavPages.PersonalData;
