--- a/src/IdentityProvider/Pages/Account/Manage/DownloadPersonalData.cshtml
+++ b/src/IdentityProvider/Pages/Account/Manage/DownloadPersonalData.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model DownloadPersonalDataModel
+@model IdentityProvider.Pages.Account.Manage.DownloadPersonalDataModel
 @{
     ViewData["Title"] = "Download Your Data";
     ViewData["ActivePage"] = ManageNavPages.PersonalData;
