--- a/src/IdentityProvider/Pages/Account/Manage/ExternalLogins.cshtml
+++ b/src/IdentityProvider/Pages/Account/Manage/ExternalLogins.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model ExternalLoginsModel
+@model IdentityProvider.Pages.Account.Manage.ExternalLoginsModel
 @{
     ViewData["Title"] = "Manage your external logins";
     ViewData["ActivePage"] = ManageNavPages.ExternalLogins;
