--- a/src/IdentityProvider/Pages/Account/Manage/ChangePassword.cshtml
+++ b/src/IdentityProvider/Pages/Account/Manage/ChangePassword.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model ChangePasswordModel
+@model IdentityProvider.Pages.Account.Manage.ChangePasswordModel
 @{
     ViewData["Title"] = "Change password";
     ViewData["ActivePage"] = ManageNavPages.ChangePassword;
