--- a/src/IdentityProvider/Pages/Account/Manage/Email.cshtml
+++ b/src/IdentityProvider/Pages/Account/Manage/Email.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model EmailModel
+@model IdentityProvider.Pages.Account.Manage.EmailModel
 @{
     ViewData["Title"] = "Manage Email";
     ViewData["ActivePage"] = ManageNavPages.Email;
