--- a/src/IdentityProvider/Pages/Account/Manage/EnableAuthenticator.cshtml
+++ b/src/IdentityProvider/Pages/Account/Manage/EnableAuthenticator.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model EnableAuthenticatorModel
+@model IdentityProvider.Pages.Account.Manage.EnableAuthenticatorModel
 @{
     ViewData["Title"] = "Configure authenticator app";
     ViewData["ActivePage"] = ManageNavPages.TwoFactorAuthentication;
