--- a/src/IdentityProvider/Pages/Account/Manage/GenerateRecoveryCodes.cshtml
+++ b/src/IdentityProvider/Pages/Account/Manage/GenerateRecoveryCodes.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model GenerateRecoveryCodesModel
+@model IdentityProvider.Pages.Account.Manage.GenerateRecoveryCodesModel
 @{
     ViewData["Title"] = "Generate two-factor authentication (2FA) recovery codes";
     ViewData["ActivePage"] = ManageNavPages.TwoFactorAuthentication;
