--- a/src/IdentityProvider/Pages/Account/Manage/Index.cshtml
+++ b/src/IdentityProvider/Pages/Account/Manage/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model IndexModel
+@model IdentityProvider.Pages.Account.Manage.IndexModel
 @using Microsoft.AspNetCore.Identity
 @using IdentityProvider.Models
 @using Microsoft.IdentityModel.Tokens
@@ -12,29 +12,19 @@
 }
 
 <h3>@ViewData["Title"]</h3>
-<partial name="_StatusMessage" model="Model.StatusMessage" />
 <div class="row">
     <div class="col-md-6">
-        <form id="profile-form" method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            @if (user != null && !string.IsNullOrEmpty(user.Photo))
-            {
-                <div class="form-group">
-                    <img class="rounded-circle me-1" height="200" src="data:image;base64,@System.Convert.ToBase64String(Base64UrlEncoder.DecodeBytes(user!.Photo))" />
-                </div>
+
+        @if (user != null && !string.IsNullOrEmpty(user.Photo))
+        {
+            <div class="form-group">
+                <img class="rounded-circle me-1" height="200" src="data:image;base64,@System.Convert.ToBase64String(Base64UrlEncoder.DecodeBytes(user!.Photo))" />
+            </div>
                 
-            }
-            <div class="form-group">
-                <label asp-for="Username"></label>
-                <input asp-for="Username" class="form-control" disabled />
-            </div>
-            <div class="form-group">
-                <label asp-for="Input.PhoneNumber"></label>
-                <input asp-for="Input.PhoneNumber" class="form-control" />
-                <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
-            </div>
-            <button id="update-profile-button" type="submit" class="btn btn-primary">Save</button>
-        </form>
+        }
+
+        <a class="nav-link" asp-page="/Account/VerifyPhone">Add phone number</a>
+
     </div>
 </div>
 
