--- a/src/IdentityProvider/Pages/Account/Manage/PersonalData.cshtml
+++ b/src/IdentityProvider/Pages/Account/Manage/PersonalData.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model PersonalDataModel
+@model IdentityProvider.Pages.Account.Manage.PersonalDataModel
 @{
     ViewData["Title"] = "Personal Data";
     ViewData["ActivePage"] = ManageNavPages.PersonalData;
