--- a/src/IdentityProvider/Pages/Account/Manage/SetPassword.cshtml
+++ b/src/IdentityProvider/Pages/Account/Manage/SetPassword.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model SetPasswordModel
+@model IdentityProvider.Pages.Account.Manage.SetPasswordModel
 @{
     ViewData["Title"] = "Set password";
     ViewData["ActivePage"] = ManageNavPages.ChangePassword;
