--- a/src/IdentityProvider/Pages/Account/Manage/ShowRecoveryCodes.cshtml
+++ b/src/IdentityProvider/Pages/Account/Manage/ShowRecoveryCodes.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model ShowRecoveryCodesModel
+@model IdentityProvider.Pages.Account.Manage.ShowRecoveryCodesModel
 @{
     ViewData["Title"] = "Recovery codes";
     ViewData["ActivePage"] = "TwoFactorAuthentication";
